--- a/metadata.yaml
+++ b/metadata.yaml
@@ -47,6 +47,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Readers -- History'
 - !lcc 'D'
+- GITenberg
 tableOfContents: Esipuhe -- Johdatus -- Vanha aika -- Itämaiset kansat -- Egyptiläiset
   -- Assyrialaiset ja babylonialaiset -- Foinikialaiset -- Persian valtakunta -- Muinaisklassilliset
   kansat -- Helleniläiset eli kreikkalaiset -- Makedonialainen helleniläisyys -- Roomalaiset
